# abot

./: .gitignore  .gitleaks.toml  BRAINSTORM.md  CLAUDE.md  Cargo.toml  Dockerfile.kubo  Dockerfile.session  README.md  TODO.md  _typos.toml  mkdocs.yml  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.claude/agents/: architecture-reviewer.md  backlog-triager.md  code-quality-reviewer.md  correctness-reviewer.md  issue-analyst.md  security-reviewer.md  vision-reviewer.md
.claude/commands/: consult.md  dispatch.md  review.md  ship-it.md  test.md  triage.md
.claude/hooks/: safety-gate.sh
.github/workflows/: release.yml
.husky/: pre-commit  pre-push
client/: app.js  index.html  login.html  login.js  manifest.json  sw.js
client/lib/: device.js  dictation-modal.js  facet-manager.js  input-sender.js  p2p-manager.js  paste-handler.js  pull-to-refresh.js  scroll-utils.js  session-list-component.js  session-manager.js  settings-handlers.js  shortcut-bar.js  shortcuts-components.js  stores.js  terminal-keyboard.js  token-list-component.js  viewport-manager.js  webauthn-errors.js  websocket-connection.js
docs/: api-reference.md  architecture.md  cli-reference.md  concepts.md  configuration.md  features.md  getting-started.md  index.md  security.md
docs/spike/: BRAINSTORM.md  CLAUDE.md  README.md  SCRATCHPAD.md  rewrite.md
e2e/: abot-management.spec.ts  document-lifecycle.spec.ts  facet-lifecycle.spec.ts  global-setup.ts  global-teardown.ts  kubo-sidebar.spec.ts  terminal-input.spec.ts
flutter_client/: pubspec.yaml
flutter_client/lib/: app.dart  main.dart
flutter_client/web/: index.html  manifest.json
homebrew/: abot.rb
src/: agent.rs  clone.rs  config.rs  employ.rs  error.rs  git.rs  integrate.rs  main.rs  manifest.rs  paths.rs  pid.rs  run.rs  settings.rs
src/auth/: challenge.rs  handlers.rs  lockout.rs  middleware.rs  mod.rs  state.rs  tokens.rs  webauthn_config.rs
src/daemon/: backend.rs  bundle.rs  docker.rs  ipc.rs  kubo.rs  kubo_exec.rs  mod.rs  pty.rs  ring_buffer.rs  session.rs
src/engine/: abot_ops.rs  backend.rs  bundle.rs  mod.rs  (+9 more)
(+57 files in other folders)
