[package]
name = "abot"
description = "Headless CLI for AI agent identities"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
